maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:64: error: unclosed character literal
  if(getIndication(X,Y) != '' && getIndication(X,Y) < c){
                           ^JediEscaper:64: error: ')' expected but something found.
  if(getIndication(X,Y) != '' && getIndication(X,Y) < c){
                           ^JediEscaper:64: error: ';' expected but ')' found.
  if(getIndication(X,Y) != '' && getIndication(X,Y) < c){
                                                       ^